--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "BBAsk-QA",
+  "name": "群发助手",
   "version": "1.1",
-  "description": "北鼻问问问",
+  "description": "微信公众号平台消息群发",
   "permissions": [
     "http://*/*",
     "https://*/*",
@@ -24,7 +24,7 @@
     "persistent": false
   },
   "browser_action": {
-    "default_title": "BBAsk-QA",
+    "default_title": "群发助手",
     "default_popup": "./src/popup/popup.html",
     "default_icon": "logo.png"
   },
